# ibidem-api

./: .dockerignore  .gitignore  Dockerfile  README.rst  dagger.json  mise.toml  pre-commit  pyproject.toml
.config/mise/: config.toml
.config/mise/tasks/: update-python-version.py
.github/workflows/: main.yaml
dagger/: pyproject.toml
dagger/src/main/: __init__.py
deploy/: application.yaml.j2  configmap.yaml  ingress.yaml  sealed-secret.yaml
hack/: deploy_subjects.yaml
ibidem/ibidem_api/: __init__.py  main.py
ibidem/ibidem_api/api/v1/: __init__.py  suc.py
ibidem/ibidem_api/api/v1/token/: __init__.py  models.py
ibidem/ibidem_api/api/v1/weather/: __init__.py  models.py
ibidem/ibidem_api/core/: config.py
ibidem_api/: main.py  probes.py
ibidem_api/api/v1/: __init__.py  suc.py  token.py
ibidem_api/api/v1/token/: __init__.py  models.py
ibidem_api/core/: config.py
