[project]
name = "ibidem-api"
description = "Ibidem micro APIs"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.30.6",
    "fiaas-logging>=0.1.1",
    "httpx>=0.27.2",
]
dynamic = [
    "version",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "ibidem_api/__init__.py"
