[project]
name = "ibidem-api"
description = "Ibidem micro APIs"
readme = "README.rst"
requires-python = "~=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.30.6",
    "fiaas-logging>=0.1.1",
    "httpx>=0.27.2",
    "joserfc>=1.0.4",
    "lightkube>=0.17.1",
    "pyyaml>=6.0.2",
    "watchfiles>=1.0.5",
]
dynamic = [
    "version",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "ibidem/ibidem_api/__init__.py"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]
