[project]
name = "ibidem-api"
description = "Ibidem micro APIs"
readme = "README.rst"
requires-python = "~=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.30.6",
    "fiaas-logging>=0.1.1",
    "httpx>=0.27.2",
    "joserfc>=1.0.4",
    "lightkube>=0.17.1",
    "pyyaml>=6.0.2",
    "watchfiles>=1.0.5",
    "hishel[httpx]>=1.1.9",
]
dynamic = [
    "version",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-sugar==1.1.1",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["ibidem"]

[tool.hatch.build.targets.wheel]
include = ["ibidem"]

[tool.hatch.version]
source = "env"
variable = "VERSION"

[tool.ruff]
line-length = 120
